--- a/small-program/pages/agreement/agreement.wxml
+++ b/small-program/pages/agreement/agreement.wxml
@@ -1,2 +1,3 @@
 <!--pages/agreement/agreement.wxml-->
-<text>pages/agreement/agreement.wxml</text>
+<!-- <text>pages/agreement/agreement.wxml</text> -->
+<web-view src="https://m.gjfax.com/html/agreement.html?from=app" bindmessage=""></web-view>
