--- a/small-program/pages/rank/rank.wxml
+++ b/small-program/pages/rank/rank.wxml
@@ -1,6 +1,7 @@
-<!--pages/rank/rank.wxml-->
+
 <nav-bar title="榜单"
   back="false"
-  home="false"></nav-bar>
+  home="false">
+</nav-bar>
 <text>pages/rank/rank.wxml</text>
 <image src="https://horse-markdown-pics.oss-cn-shenzhen.aliyuncs.com/img/图片1.png" alt="" />
